Fix spacing in navbar dropdowns
spaces were used to add a margin for the dropdown caret, and ended up int he translation strings.
Remove the spaces and use CSS instead to add a margin

--- a/frontend/css/theme/navbars.less
+++ b/frontend/css/theme/navbars.less
@@ -58,6 +58,7 @@
     > .dropdown > a .caret {
       border-top-color: @link-color;
       border-bottom-color: @link-color;
+      margin-left: 0.4em;
     }
     > .open > a {
       &,
@@ -167,7 +168,6 @@
 .navbar-default {
   .navbar-variant(@orange);
 }
-
 
 .navbar-form {
   padding-top: 4px;
